unpackaged/main/default/objects/SDO_Service_Einstein_Agent_Helper__c/SDO_Service_Einstein_Agent_Helper__c.object-meta.xml
<CustomObject>
    <description>What: Einstein Agent Helper object used to simulate agent helpers. Who: Service team and Hanul Park.</description>
    <label>Einstein Agent Helper</label>
    <nameField>
        <displayFormat>EAH-{0000}</displayFormat>
        <label>Einstein Agent Helper Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Einstein Agent Helpers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>