unpackaged/main/default/objects/SDO_Service_Einstein_Agent_Helper__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>This rule is active and will apply recommendations</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>