unpackaged/main/default/objects/SDO_Service_Einstein_Agent_Helper__c/fields/Comparator__c.field-meta.xml
<CustomField>
    <fullName>Comparator__c</fullName>
    <label>Comparator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EQ</fullName>
                <label>=</label>
            </value>
            <value>
                <fullName>NOT_EQ</fullName>
                <label>!=</label>
            </value>
            <value>
                <fullName>LT</fullName>
                <label>&lt;</label>
            </value>
            <value>
                <fullName>LTE</fullName>
                <label>&lt;=</label>
            </value>
            <value>
                <fullName>GTE</fullName>
                <label>&gt;=</label>
            </value>
            <value>
                <fullName>GT</fullName>
                <label>&gt;</label>
            </value>
            <value>
                <fullName>STARTS</fullName>
                <label>starts with</label>
            </value>
            <value>
                <fullName>ENDS</fullName>
                <label>ends with</label>
            </value>
            <value>
                <fullName>CONTAINS</fullName>
                <label>contains</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>in</label>
            </value>
            <value>
                <fullName>NOT_IN</fullName>
                <label>not in</label>
            </value>
            <value>
                <fullName>INCLUDES</fullName>
                <label>includes</label>
            </value>
            <value>
                <fullName>EXCLUDES</fullName>
                <label>excludes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>