unpackaged/main/default/objects/SDO_Service_Einstein_Agent_Helper__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <inlineHelpText>Confidence level of Einstein ranging from 1-100. The highest confidence level will be applied as best option.</inlineHelpText>
    <label>Confidence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>