unpackaged/main/default/objects/SDO_Service_Einstein_Agent_Helper__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <inlineHelpText>Case field to be evaluated when created or updated. Must match the API name of the field (e.g. Name, CustomField__c, etc.).</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>