unpackaged/main/default/objects/SDO_Service_Einstein_Agent_Helper__c/fields/Recommendation_Field__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Field__c</fullName>
    <inlineHelpText>Case field the recommendation will be applied to. Must match the API name of the field (e.g. Name, CustomField__c, etc.).</inlineHelpText>
    <label>Recommendation Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>