unpackaged/main/default/objects/SDO_Service_Einstein_Agent_Helper__c/fields/Recommendation_Value__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Value__c</fullName>
    <inlineHelpText>Value of the recommendation. Checkboxes are set to true or false.</inlineHelpText>
    <label>Recommendation Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>