unpackaged/main/default/objects/SDO_Service_Einstein_Agent_Helper__c/fields/Recommended_Article__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Article__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recommended Article</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>Einstein Agent Helpers</relationshipLabel>
    <relationshipName>Einstein_Agent_Helpers</relationshipName>
    <type>Lookup</type>
</CustomField>