unpackaged/main/default/objects/SDO_Service_Einstein_Agent_Helper__c/fields/Recommended_Article_Score__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Article_Score__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Provide a number between 1-100 to define the relevance score</description>
    <inlineHelpText>Provide a number between 1-100 to define the relevance score</inlineHelpText>
    <label>Recommended Article Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>