unpackaged/main/default/objects/SDO_Service_Einstein_Agent_Helper__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field__c</columns>
    <columns>Comparator__c</columns>
    <columns>Value__c</columns>
    <columns>Recommendation_Field__c</columns>
    <columns>Recommendation_Value__c</columns>
    <columns>Confidence__c</columns>
    <columns>Recommended_Article__c</columns>
    <columns>Recommended_Article_Score__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>